<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.AddEditTransactionActivity">

    <include layout="@layout/layout_appbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:id="@+id/addedit_transaction_container"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addedit_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="5dp"
                android:textColorHint="@color/colorTextSecondary"
                android:layout_marginEnd="36dp"
                android:textDirection="locale"
                app:endIconTint="#000000"
                app:endIconDrawable="@drawable/ic_calculate_24"
                app:endIconMode="custom"
                app:hintAnimationEnabled="false" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addedit_transaction_amount_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="numberDecimal"
                    android:hint="@string/transaction_amount"
                    android:drawablePadding="0dp"
                    android:maxLength="55"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="#FFFFFF"
                app:cardCornerRadius="15dp"
                app:contentPadding="20dp"
                app:contentPaddingBottom="100dp">

                <LinearLayout
                    android:id="@+id/addedit_transaction_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addedit_transaction_concept"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorTextSecondary"
                        android:textDirection="locale"
                        app:hintAnimationEnabled="false" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addedit_transaction_concept_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:drawablePadding="0dp"
                            android:hint="@string/transaction_concept"
                            android:textColor="@color/colorTextHighlight" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.tiper.MaterialSpinner
                        android:id="@+id/addedit_transaction_from_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/transaction_from_account"
                        android:textColorHint="@color/colorTextSecondary"
                        android:textDirection="locale"
                        app:boxBackgroundColor="@color/colorSurface"
                        app:startIconDrawable="@drawable/ic_account_balance_bank_black_24dp"
                        app:boxStrokeWidth="0dp"
                        app:hintAnimationEnabled="false" />

                    <com.tiper.MaterialSpinner
                        android:id="@+id/addedit_transaction_to_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:visibility="gone"
                        android:hint="@string/transaction_to_account"
                        android:textColorHint="@color/colorTextSecondary"
                        android:textDirection="locale"
                        app:boxBackgroundColor="@color/colorSurface"
                        app:startIconDrawable="@drawable/ic_account_balance_bank_black_24dp"
                        app:boxStrokeWidth="0dp"
                        app:hintAnimationEnabled="false" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorAccent"
                        android:text="@string/create_new_account"
                        android:textDirection="locale"
                        android:clickable="true"
                        android:focusable="true"
                        android:textAlignment="textEnd"
                        android:id="@+id/addedit_transaction_new_account" />

                    <com.tiper.MaterialSpinner
                        android:id="@+id/addedit_transaction_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/transaction_category"
                        android:textColorHint="@color/colorTextSecondary"
                        android:textDirection="locale"
                        app:boxBackgroundColor="@color/colorSurface"
                        app:startIconDrawable="@drawable/ic_baseline_category_24"
                        app:boxStrokeWidth="0dp"
                        app:hintAnimationEnabled="false" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/colorAccent"
                        android:text="@string/create_new_category"
                        android:textDirection="locale"
                        android:clickable="true"
                        android:focusable="true"
                        android:textAlignment="textEnd"
                        android:id="@+id/addedit_transaction_new_category" />

                    <RelativeLayout
                        android:id="@+id/addedit_transaction_more_options_toggle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingHorizontal="12dp"
                        android:textDirection="locale"
                        android:layout_marginVertical="26dp">
                        <TextView
                            android:id="@+id/addedit_transaction_more_options_text"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_toStartOf="@id/addedit_transaction_more_options_arrow"
                            android:layout_alignParentStart="true"
                            android:text="@string/show_more_options" />
                        <ImageView
                            android:id="@+id/addedit_transaction_more_options_arrow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            app:srcCompat="@drawable/ic_baseline_expand_more_24"
                            android:contentDescription="@string/toggle_more_options" />
                    </RelativeLayout>
                    <LinearLayout
                        android:id="@+id/addedit_transaction_more_options_container"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/addedit_transaction_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textDirection="locale"
                            app:endIconDrawable="@drawable/ic_date_range_black_24dp"
                            app:endIconTint="#000000"
                            app:endIconMode="custom"
                            app:hintAnimationEnabled="false" >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/addedit_transaction_date_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@android:color/transparent"
                                android:drawablePadding="0dp"
                                android:hint="@string/transaction_date"
                                android:enabled="false"
                                android:textColor="@color/colorTextHighlight" />
                            <Switch
                                android:id="@+id/addedit_transaction_include_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:height="50dp"
                                android:text="@string/transaction_specify_time"
                                android:textColor="@color/colorTextHighlight"
                                android:checked="false"
                                android:layout_marginStart="16dp"
                                tools:ignore="RtlSymmetry" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.tiper.MaterialSpinner
                            android:id="@+id/addedit_transaction_currency"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:height="50dp"
                            android:hint="@string/transaction_currency"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textDirection="locale"
                            app:boxBackgroundColor="@color/colorSurface"
                            app:startIconDrawable="@drawable/ic_attach_money_black_24dp"
                            app:boxStrokeWidth="0dp"
                            app:hintAnimationEnabled="false" />

                        <TextView
                            android:id="@+id/addedit_transaction_currency_cannot_change"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/colorTextSecondary"
                            android:textDirection="locale"
                            android:text="@string/transaction_exchange_rate_info"
                            android:textSize="12sp"
                            android:layout_marginStart="16dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/addedit_transaction_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:textColorHint="@color/colorTextSecondary"
                            app:startIconTint="#000000"
                            app:startIconDrawable="@drawable/ic_baseline_notes_24"
                            app:hintAnimationEnabled="false" >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/addedit_transaction_notes_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@android:color/transparent"
                                android:drawablePadding="0dp"
                                android:hint="@string/transaction_notes"
                                android:textColor="@color/colorTextHighlight"
                                android:layoutDirection="locale"
                                android:textDirection="locale" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Switch
                            android:id="@+id/addedit_transaction_mark_as_done"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:height="50dp"
                            android:text="@string/transaction_mark_as_done"
                            android:textColor="@color/colorTextHighlight"
                            android:checked="true" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addedit_transaction_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="35dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#00000000"
        app:srcCompat="@drawable/ic_check_black_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>