...
    <string name="account_currency">Account currency</string>
    <string name="account_currency_cannot_change">You cannot change an account\'s currency</string>
    <string name="account_type">Account type</string>
    <string name="account_include_in_sum">Include in homepage sum</string>
    <string name="account_pick_color">Pick a color to identify this account</string>
    <string name="account_pick_color_title">Pick a color</string>
    <string name="account_error_name">Account name can\'t be empty.</string>

    <string name="account_error_initial_value">Initial value is not a valid number.</string>
    <string name="account_message_saved">Your account was saved correctly.</string>
    <string name="account_message_updated">Your account was updated correctly.</string>
    <string name="account_message_archived">Your account was archived correctly.</string>
    <string name="account_current_balance">Current balance</string>

    <!--  Account card  -->
...
